@startuml
title UML Diagram - Manga Merch Store with Security

abstract class MerchProduct {
  - id: Long
  - name: String
  - price: Double
  - description: String
}

class MangaBook {
  - author: String
  - volumeNumber: int
  - publisher: String
}

class Figure {
  - brand: String
  - character: String
  - scale: String
}

class Apparel {
  - size: String
  - color: String
  - type: String
}

class Customer {
  - id: Long
  - name: String
  - email: String
}

class Order {
  - id: Long
  - date: Date
  - total: Double
}

class OrderProduct {
  - id: Long
  - quantity: int
  - subtotal: Double
}

class User {
  - id: Long
  - username: String
  - password: String
  - roles: String
}

MerchProduct <|-- MangaBook
MerchProduct <|-- Figure
MerchProduct <|-- Apparel

Customer "1" --> "0..*" Order : places
Order "1" --> "0..*" OrderProduct
OrderProduct "1" --> "1" MerchProduct

Customer "1" --> "1" User : credentials
@enduml
